week1/ex2/ex2Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  expr : IF expr THEN expr ELSE expr
   3       | compare_expr

   4  compare_expr : arith_expr EQ arith_expr
   5               | arith_expr LT arith_expr
   6               | arith_expr

   7  arith_expr : arith_expr PLUS term_expr
   8             | arith_expr MINUS term_expr
   9             | term_expr

  10  term_expr : term_expr TIMES atomic_expr
  11            | term_expr DIV atomic_expr
  12            | atomic_expr

  13  atomic_expr : INT
  14              | BOOL
  15              | LPAR expr RPAR

  16  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (16)

	INT  shift 3
	BOOL  shift 4
	IF  shift 5
	LPAR  shift 6
	.  error

	main  goto 7
	expr  goto 8
	compare_expr  goto 9
	arith_expr  goto 10
	term_expr  goto 11
	atomic_expr  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (13)

	.  reduce 13


state 4
	atomic_expr : BOOL .  (14)

	.  reduce 14


state 5
	expr : IF . expr THEN expr ELSE expr  (2)

	INT  shift 3
	BOOL  shift 4
	IF  shift 5
	LPAR  shift 6
	.  error

	expr  goto 13
	compare_expr  goto 9
	arith_expr  goto 10
	term_expr  goto 11
	atomic_expr  goto 12


state 6
	atomic_expr : LPAR . expr RPAR  (15)

	INT  shift 3
	BOOL  shift 4
	IF  shift 5
	LPAR  shift 6
	.  error

	expr  goto 14
	compare_expr  goto 9
	arith_expr  goto 10
	term_expr  goto 11
	atomic_expr  goto 12


state 7
	%entry% : '\001' main .  (16)

	.  reduce 16


state 8
	main : expr . EOF  (1)

	EOF  shift 15
	.  error


state 9
	expr : compare_expr .  (3)

	.  reduce 3


state 10
	compare_expr : arith_expr . EQ arith_expr  (4)
	compare_expr : arith_expr . LT arith_expr  (5)
	compare_expr : arith_expr .  (6)
	arith_expr : arith_expr . PLUS term_expr  (7)
	arith_expr : arith_expr . MINUS term_expr  (8)

	PLUS  shift 16
	MINUS  shift 17
	EQ  shift 18
	LT  shift 19
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	EOF  reduce 6


state 11
	arith_expr : term_expr .  (9)
	term_expr : term_expr . TIMES atomic_expr  (10)
	term_expr : term_expr . DIV atomic_expr  (11)

	TIMES  shift 20
	DIV  shift 21
	PLUS  reduce 9
	MINUS  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	EOF  reduce 9


state 12
	term_expr : atomic_expr .  (12)

	.  reduce 12


state 13
	expr : IF expr . THEN expr ELSE expr  (2)

	THEN  shift 22
	.  error


state 14
	atomic_expr : LPAR expr . RPAR  (15)

	RPAR  shift 23
	.  error


state 15
	main : expr EOF .  (1)

	.  reduce 1


state 16
	arith_expr : arith_expr PLUS . term_expr  (7)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	term_expr  goto 24
	atomic_expr  goto 12


state 17
	arith_expr : arith_expr MINUS . term_expr  (8)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	term_expr  goto 25
	atomic_expr  goto 12


state 18
	compare_expr : arith_expr EQ . arith_expr  (4)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	arith_expr  goto 26
	term_expr  goto 11
	atomic_expr  goto 12


state 19
	compare_expr : arith_expr LT . arith_expr  (5)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	arith_expr  goto 27
	term_expr  goto 11
	atomic_expr  goto 12


state 20
	term_expr : term_expr TIMES . atomic_expr  (10)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	atomic_expr  goto 28


state 21
	term_expr : term_expr DIV . atomic_expr  (11)

	INT  shift 3
	BOOL  shift 4
	LPAR  shift 6
	.  error

	atomic_expr  goto 29


state 22
	expr : IF expr THEN . expr ELSE expr  (2)

	INT  shift 3
	BOOL  shift 4
	IF  shift 5
	LPAR  shift 6
	.  error

	expr  goto 30
	compare_expr  goto 9
	arith_expr  goto 10
	term_expr  goto 11
	atomic_expr  goto 12


state 23
	atomic_expr : LPAR expr RPAR .  (15)

	.  reduce 15


state 24
	arith_expr : arith_expr PLUS term_expr .  (7)
	term_expr : term_expr . TIMES atomic_expr  (10)
	term_expr : term_expr . DIV atomic_expr  (11)

	TIMES  shift 20
	DIV  shift 21
	PLUS  reduce 7
	MINUS  reduce 7
	EQ  reduce 7
	LT  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	EOF  reduce 7


state 25
	arith_expr : arith_expr MINUS term_expr .  (8)
	term_expr : term_expr . TIMES atomic_expr  (10)
	term_expr : term_expr . DIV atomic_expr  (11)

	TIMES  shift 20
	DIV  shift 21
	PLUS  reduce 8
	MINUS  reduce 8
	EQ  reduce 8
	LT  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	EOF  reduce 8


state 26
	compare_expr : arith_expr EQ arith_expr .  (4)
	arith_expr : arith_expr . PLUS term_expr  (7)
	arith_expr : arith_expr . MINUS term_expr  (8)

	PLUS  shift 16
	MINUS  shift 17
	THEN  reduce 4
	ELSE  reduce 4
	RPAR  reduce 4
	EOF  reduce 4


state 27
	compare_expr : arith_expr LT arith_expr .  (5)
	arith_expr : arith_expr . PLUS term_expr  (7)
	arith_expr : arith_expr . MINUS term_expr  (8)

	PLUS  shift 16
	MINUS  shift 17
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	EOF  reduce 5


state 28
	term_expr : term_expr TIMES atomic_expr .  (10)

	.  reduce 10


state 29
	term_expr : term_expr DIV atomic_expr .  (11)

	.  reduce 11


state 30
	expr : IF expr THEN expr . ELSE expr  (2)

	ELSE  shift 31
	.  error


state 31
	expr : IF expr THEN expr ELSE . expr  (2)

	INT  shift 3
	BOOL  shift 4
	IF  shift 5
	LPAR  shift 6
	.  error

	expr  goto 32
	compare_expr  goto 9
	arith_expr  goto 10
	term_expr  goto 11
	atomic_expr  goto 12


state 32
	expr : IF expr THEN expr ELSE expr .  (2)

	.  reduce 2


17 terminals, 8 nonterminals
17 grammar rules, 33 states
